--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "index.html", "use": "@vercel/static" },
     { "src": "styles.css", "use": "@vercel/static" },
     { "src": "call-panel.js", "use": "@vercel/static" },
+    { "src": "animations.js", "use": "@vercel/static" },
     { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
